- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    6.3.2, 6.4.0, 6.4.1, 6.4.2
- 
    None
- 
    Android 12, Samsung Galaxy A32; Android 11, Xiaomi Redmi Note 10S
- 
        
- 
        31a5ecf3a (dev), 88817908e (6.5)
Hello, I have an android-specific issue when using `TapHandler` and `PinchHandler`.
When these two handlers are used, `TapHandler` does not react to taps, but instead prints the following error message:
W qt.quick.touch.target: : QQuickTapHandler(0x7760195180) pointId 1 is missing from current event, but was neither canceled nor released
*singleTapped signal is not called. *
Note: this happens only after a you zoom in/out quite a few times. Usually when I zoom 4-5 times, I can reproduce this issue.
Note2: after zooming in/out a few times again it usually works again, but the process repeats
It is reproducible on a very easy app that has a Rectangle and on top of it `PinchHandler` and `TapHandler`. You can also reproduce it on this Qt "pinchHandler" example: https://github.com/qt/qtdeclarative/blob/dev/examples/quick/pointerhandlers/pinchHandler.qml
- relates to
- 
                    QTBUG-113005 Tap handlers are broken on Android. -         
- Closed
 
-         
